[package]
name = "peach-buttons"
version = "0.1.0"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"

[dependencies]
gpio-cdev = "0.2.0"
jsonrpc-core = "11.0.0"
jsonrpc-ws-server = "11.0.0"
jsonrpc-pubsub = "11.0.0"
jsonrpc-test = "11.0.0"
crossbeam-channel = "0.3"
crossbeam-utils = "0.6"
log = "0.4.0"
env_logger = "0.6.1"
