[package]
name = "peach-buttons"
version = "0.1.0"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "GPIO microservice module for handling button presses. peach-buttons implements a JSON-RPC server with Publish-Subscribe extension. Each button press results in a JSON-RPC request being sent over websockets to any subscribers. A button code for the pressed button is sent with the request to subscribers, allowing state-specific actions to be taken."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-buttons"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[badges]
travis-ci = { repository = "peachcloud/peach-buttons", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
crossbeam-channel = "0.3"
env_logger = "0.6.1"
gpio-cdev = "0.2.0"
jsonrpc-core = "11.0.0"
jsonrpc-ws-server = "11.0.0"
jsonrpc-pubsub = "11.0.0"
jsonrpc-test = "11.0.0"
log = "0.4.0"
snafu = "0.4.1"
