[package]
name = "peach-buttons"
version = "0.1.2"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "peach-buttons is a GPIO microservice for handling button presses, implementing a JSON-RPC server with Publish-Subscribe extension. Each button press results in a JSON-RPC request being sent over websockets to any subscribers. A button code for the pressed button is sent with the request to subscribers, allowing state-specific actions to be taken."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-buttons"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-buttons is a GPIO microservice for handling button presses, \
implementing a JSON-RPC server with Publish-Subscribe extention. \
Each button press results in a JSON-RPC request being sent over websockets \
to any subscribers."""
maintainer-scripts="debian"
assets = [
    ["target/release/peach-buttons", "usr/bin/", "755"],
    ["debian/peach-buttons.service", "/lib/systemd/system/peach-buttons.service", "644"],
    ["README.md", "usr/share/doc/peach-buttons/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-buttons", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
crossbeam-channel = "0.5"
env_logger = "0.8"
gpio-cdev = "0.4"
jsonrpc-core = "15"
jsonrpc-ws-server = "15"
jsonrpc-pubsub = "15"
jsonrpc-test = "15"
log = "0.4"
snafu = "0.6"
